plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dn'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation "org.springframework.boot:spring-boot-starter-validation"

    // Для БД
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //runtimeOnly 'com.h2database:h2'
    implementation 'org.postgresql:postgresql:42.7.4'

    // Для разработки
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Для секьюрити
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6' // для сериализации JSON

    // Для тестирования
    testImplementation 'org.springframework.boot:spring-boot-starter-test'  // JUnit 5, AssertJ, Hamcrest, Mockito
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'

    // Доп. зависимости
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Telegram
    implementation 'org.telegram:telegrambots:6.9.7.1'
}

// Конфигурация тестов
test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
